# minify-html

./: .gitignore  Cargo.toml  LICENSE  README.md  build  no-modules.build  package.json  package.merge.json  web.build
src/: lib.rs
wasm/: Cargo.toml  build  package.merge.json
