[package]
name = "minify-html-wasm"
publish = false
version = "0.0.3"
authors = ["Wilson Lin <code@wilsonl.in>", "Ze-Zheng Wu <zzwu@zju.edu.cn>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
minify-html = "0.11.1"
wasm-bindgen = "0.2.87"
lol_alloc = "0.4.0"
tsify = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
# Don't add WebAssembly fallback imports in generated JavaScript.
omit-default-module-path = true
